added drag and drop

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <script src="./script.js" defer></script>
 
   <template id="todo-template">
-    <li class="todo-card">
+    <li class="todo-card" draggable="true">
       <h3 class="todo-card__title"></h3>
       <div class="todo-card__controls">
         <button class="todo-card__button todo-card__button_check"></button>
