added new style

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body class="page">
   <header class="header page__section">
     <h1 class="header__title">TODO List</h1>
+    <img class="header__image" src="./images/task_FILL0_wght400_GRAD0_opsz48.svg" alt="todo list">
   </header>
   <main class="content">
     <section class="todo">
